refactor: 게시판 관련 코드 구조 수정