@@ -66,7 +66,7 @@ public class PostQueryRepository {
                         post.isDeleted.isFalse()
                 )
                 .fetch();
-        return list.isEmpty() ? Optional.empty() : Optional.of(list.get(0));
+        return list.isEmpty() ? Optional.empty() : Optional.of(list.getFirst());
     }
 
     public List<BoardInfo.CommentItem> findCommentItemsByPostId(Long postId) {
